# GoogleDriveTools

./: main.py  pyproject.toml  settings.yaml  upload.py
Json/: credentials_test.json
gdrive/: cli.py
gdrivetools/: core.py
